Fixed h1 alignment bug in offerings boxes on homepage.

--- a/views/sass/_offerings.sass
+++ b/views/sass/_offerings.sass
@@ -38,8 +38,6 @@
 
   @media (min-width: 768px)
     @include row($margin_t, $gutter_t)
-    h1
-      @include col(1, 1, $margin_t, $gutter_t)
     .offering
       @include col(1, 1, $margin_t, $gutter_t)
 
@@ -49,15 +47,11 @@
   
   @media (min-width: 1024px)
     @include row($margin_s, $gutter_s)
-    h1
-      @include col(1, 1, $margin_s, $gutter_s)
     .offering
       @include col(3, 1, $margin_s, $gutter_s)
   
   @media (min-width: 1920px)
     @include row($margin_l, $gutter_l)
-    h1
-      @include col(1, 1, $margin_l, $gutter_l)
     .offering
       @include col(3, 1, $margin_l, $gutter_l)
 
